--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ledvanoff/sf_oopapp.git"
+    "url": "git+https://github.com/MarinaStarovoytova/sf_oopapp.git"
   },
   "keywords": [
     "skillfactory",
     "js",
     "oop"
   ],
-  "author": "Oleg Ledvanov",
+  "author": "Marina Starovoytova",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ledvanoff/sf_oopapp/issues"
+    "url": "https://github.com/MarinaStarovoytova/sf_oopapp/issues"
   },
-  "homepage": "https://github.com/ledvanoff/sf_oopapp#readme",
+  "homepage": "https://github.com/MarinaStarovoytova/sf_oopapp#readme",
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.1.2",
